--- a/watchlist/templates/index.html
+++ b/watchlist/templates/index.html
@@ -22,7 +22,7 @@
 				<form form method="POST" action="/logout/">
 					<a id="login_out" href="/logout/" class="button">退出登录</a>
 					<div id="user_name">
-						<span>Username</span>
+						<span>{{ current_user.username }}</span>
 					</div>
 					<div id="user_img">
 						<img src="/static/pic/1.jpg" alt="image">
@@ -72,6 +72,7 @@
 			</div>
 
 			<div id="content">
+
 				<div id="my_courses" class="index_box">
 					<a href="/my_courses/">
 						<div class="index_img">
@@ -79,30 +80,16 @@
 						</div>
 						我的课程
 					</a>
+					{% for c in courses %}
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/my_courses/all_courses/{{ c['id'] }}/">
 							<div class="index_img">
 								<img src="/static/pic/course_.png" alt="">
 							</div>
-							课程1
+							{{ c['name'] }}
 						</a>
 					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="/static/pic/course_.png" alt="">
-							</div>
-							课程2
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="/static/pic/course_.png" alt="">
-							</div>
-							课程3
-						</a>
-					</div>
+					{% endfor %}
 					<p class="index_box_no">--没有更多课程--</p>
 				</div>
 
@@ -113,30 +100,16 @@
 						</div>
 						&nbsp我的进程
 					</a>
+					{% for p in processes %}
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/process/{{ p['id'] }}/">
 							<div class="index_img">
 								<img src="/static/pic/process_.png" alt="">
 							</div>
-							process1
+							{{ p['name'] }}
 						</a>
 					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="/static/pic/process_.png" alt="">
-							</div>
-							process2
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="/static/pic/process_.png" alt="">
-							</div>
-							process3
-						</a>
-					</div>
+					{% endfor %}
 					<p class="index_box_no">--没有更多进程--</p>
 				</div>
 
@@ -147,22 +120,16 @@
 						</div>
 						&nbsp通知
 					</a>
+					{% for m in messages %}
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/message/{{ m['id'] }}/">
 							<div class="index_img">
 								<img src="/static/pic/process_.png" alt="">
 							</div>
-							message1
+							{{ m['course_name'] }} - {{ m['title'] }}
 						</a>
 					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="/static/pic/process_.png" alt="">
-							</div>
-							message2
-						</a>
-					</div>
+					{% endfor %}
 					<p class="index_box_no">--没有更多通知--</p>
 				</div>
 				
