--- a/watchlist/templates/process_xxx.html
+++ b/watchlist/templates/process_xxx.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Programm1-Result</title>
-	<link rel="stylesheet" href="../static/style.css" />
+	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
 	{% for message in get_flashed_messages() %}
@@ -14,7 +14,7 @@
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-	            <img src="../static/pic/logo.png" alt="">
+	            <img src="/static/pic/logo.png" alt="">
 	            <span>GPU管理系统</span>
 	        </div>
 
@@ -22,7 +22,7 @@
 				<form form method="POST" action="/logout/">
 					<a id="login_out" href="/logout/" class="button">退出登录</a>
 					<div id="user_name">
-						<span>Username</span>
+						<span>{{ current_user.username }}</span>
 					</div>
 					<div id="user_img">
 						<img src="/static/pic/1.jpg" alt="image">
@@ -36,7 +36,7 @@
 				<br>
 				<div id="Home Page">
 					<div class="asidepic">
-						<img src="../static/pic/home.png" alt="">
+						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
 						<a href="/index/">主页</a>
@@ -45,25 +45,25 @@
 
 				<div id="My courses">
 					<div class="asidepic">
-						<img src="../static/pic/courses.png" alt="">
+						<img src="/static/pic/courses.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="../my_courses/">我的课程</a>
+						<a href="/my_courses/">我的课程</a>
 					</div>
 				</div>
 
 				<div id="Process">
 					<div class="asidepic">
-						<img src="../static/pic/process.png" alt="">
+						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="../process/">进程</a>
+						<a href="/process/">进程</a>
 					</div>
 				</div>
 
 				<div id="Settings">
 					<div class="asidepic">
-						<img src="../static/pic/settings.png" alt="">
+						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
 						<a href="/settings/">设置</a>
@@ -73,7 +73,7 @@
 
 			<div id="content">
 				<div id="result1">
-					<p>Programm1-xxx</p>
+					<p>{{ process.name }} - {{ process.info }}</p>
 					<div id="box1" >
 						<p>
 							finished
@@ -86,49 +86,10 @@
 						运行结果
 					</p>
 					<p id="box2" >
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-						xxxxxxxxxxxxxxxx
-						<br>
-						xxxxxxxxxxx
-						<br>
-
+						{{ process.result }}
 					</p>
 				</div>
+
 
 			</div>
 
