--- a/watchlist/templates/stu_notice.html
+++ b/watchlist/templates/stu_notice.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>notice</title>
-	<link rel="stylesheet" href="../static/style.css" />
+	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
 	{% for message in get_flashed_messages() %}
@@ -14,7 +14,7 @@
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-	            <img src="../static/pic/logo.png" alt="">
+	            <img src="/static/pic/logo.png" alt="">
 	            <span>GPU管理系统</span>
 	        </div>
 
@@ -22,7 +22,7 @@
 				<form form method="POST" action="/logout/">
 					<a id="login_out" href="/logout/" class="button">退出登录</a>
 					<div id="user_name">
-						<span>Username</span>
+						<span>{{ current_user.username }}</span>
 					</div>
 					<div id="user_img">
 						<img src="/static/pic/1.jpg" alt="image">
@@ -36,7 +36,7 @@
 				<br>
 				<div id="Home Page">
 					<div class="asidepic">
-						<img src="../static/pic/home.png" alt="">
+						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
 						<a href="/index/">主页</a>
@@ -45,7 +45,7 @@
 
 				<div id="My courses">
 					<div class="asidepic">
-						<img src="../static/pic/courses.png" alt="">
+						<img src="/static/pic/courses.png" alt="">
 					</div>
 					<div class="asidechoices">
 						<a href="/my_courses/">我的课程</a>
@@ -54,7 +54,7 @@
 
 				<div id="Process">
 					<div class="asidepic">
-						<img src="../static/pic/process.png" alt="">
+						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
 						<a href="/process/">进程</a>
@@ -63,7 +63,7 @@
 
 				<div id="Settings">
 					<div class="asidepic">
-						<img src="../static/pic/settings.png" alt="">
+						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
 						<a href="/settings/">设置</a>
@@ -72,177 +72,31 @@
 			</div>
 
 			<div id="content">
+				{% for c in courses %}
 				<div id="coure_notice" class="index_box">
 					<a href="/my_courses/">
 						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
+							<img src="/static/pic/courses.png" alt="">
 						</div>
-						<p>程序设计</p>
+						<p>{{ c['name'] }}</p>
 					</a>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知1</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
-				</div>
 
-				<div id="coure_notice" class="index_box">
-					<a href="/my_courses/">
-						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
-						</div>
-						<p>机器学习</p>
-					</a>
+					{% for m in messages %}
+					{% if m['course_name'] == c['name'] %}
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/message/{{ m['id'] }}/">
 							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
+								<img src="/static/pic/message_.png" alt="">
 							</div>
-							<span>通知1</span>
+							<span>{{ m['title'] }}</span>
 						</a>
 					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
-				</div>
+					{% endif %}
+					{% endfor %}
 
-				<div id="coure_notice" class="index_box">
-					<a href="/my_courses/">
-						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
-						</div>
-						<p>人工智能</p>
-					</a>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知1</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
+				<p style="clear:both;text-align:center;margin:10px;">--没有更多消息--</p>
 				</div>
-
-				<div id="coure_notice" class="index_box">
-					<a href="/my_courses/">
-						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
-						</div>
-						<p>人工神经网络</p>
-					</a>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知1</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
-				</div>
-
-				<div id="coure_notice" class="index_box">
-					<a href="/my_courses/">
-						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
-						</div>
-						<p>xxx实验室</p>
-					</a>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知1</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
-				</div>
-
-				<p style="clear:both;text-align:center;margin:10px;">--没有更多课程--</p>				
+				{% endfor %}
 			</div>
 		</div>
 
