课程显示问题修正

--- a/watchlist/templates/my_courses.html
+++ b/watchlist/templates/my_courses.html
@@ -108,7 +108,7 @@
 						<p>课程不在列表里？加入新的课程</p>
 					</div>
 				</div>
-				<p class="index_box_no">--没有更多课程--</p>
+				<p style="clear:both;" class="index_box_no">--没有更多课程--</p>
 			</div>
 
 		</div>
