学生端跳转基本ok-by zyl

--- a/watchlist/templates/process.html
+++ b/watchlist/templates/process.html
@@ -78,7 +78,7 @@
 						<div class="index_img">
 							<img src="/static/pic/process_.png" alt="">
 						</div>
-						{{ p['name'] }}
+						{{ p['name'] }} - in {{ p['gpu_name'] }}
 					</a>
 					<div class="programsum">
 						<p>{{ p['info'] }}</p>
