--- a/watchlist/templates/index.html
+++ b/watchlist/templates/index.html
@@ -106,7 +106,7 @@
 							<div class="index_img">
 								<img src="/static/pic/process_.png" alt="">
 							</div>
-							{{ p['name'] }}
+							{{ p['name'] }} - in {{ p['gpu_name'] }}
 						</a>
 					</div>
 					{% endfor %}
