--- a/watchlist/templates/index_teacher.html
+++ b/watchlist/templates/index_teacher.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>home page</title>
-	<link rel="stylesheet" href="/static/style.css" />
+	<link rel="stylesheet" href="/static/style_teacher.css" />
 </head>
 <body>
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-	            <img src="../static/pic/logo.png" alt="">
+	            <img src="/static/pic/logo.png" alt="">
 	            <span>GPU管理系统</span>
 	        </div>
 
