--- a/watchlist/templates/gpu_xxx_teacher.html
+++ b/watchlist/templates/gpu_xxx_teacher.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Settings</title>
-	<link rel="stylesheet" href="/static/style.css" />
+	<link rel="stylesheet" href="/static/style_teacher.css" />
 </head>
 <body>
 	<div id="container">
