--- a/watchlist/templates/my_courses_teacher.html
+++ b/watchlist/templates/my_courses_teacher.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My courses</title>
-	<link rel="stylesheet" href="/static/style.css" />
+	<link rel="stylesheet" href="/static/style_teacher.css" />
 </head>
 <body>
 {% for message in get_flashed_messages() %}
