--- a/watchlist/templates/course_xxx.html
+++ b/watchlist/templates/course_xxx.html
@@ -14,18 +14,18 @@
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-	            <img src="/static/pic/logo.png" alt="">
+	            <img src="../static/pic/logo.png" alt="">
 	            <span>GPU管理系统</span>
 	        </div>
 
 			<div id="other">
 				<form form method="POST" action="/logout/">
 					<a id="login_out" href="/logout/" class="button">退出登录</a>
-					<div id="user_name">
-						<span>{{ current_user.username }}</span>
-					</div>
 					<div id="user_img">
 						<img src="/static/pic/1.jpg" alt="image">
+					</div>
+					<div id="user_name">
+						<span>{{ current_user.username }}</span>
 					</div>
 				</form>			
 			</div>
@@ -72,66 +72,70 @@
 			</div>
 
 			<div id="content">
-				<div id="course_photo">
-					<img src="/static/pic/course_logo.png" alt="">
-				</div>
-
-				<div id="course_notice">
-					<div class="index_img">
-						<img src="/static/pic/message.png" alt="">
+				<div id="course_above">
+					<div id="course_photo">
+						<img src="/static/pic/course_logo.png" alt="">
 					</div>
-					<span>
-						通知
-					</span>
-					{% for m in messages %}
-					{% if m['course_name'] == course['name'] %}
-					<div class="coursegpubox">
-						<a href="/message/{{ m['id'] }}/">
-							<div class="index_img">
-								<img src="/static/pic/message_.png" alt="">
-							</div>
-							{{ m['title'] }}
-						</a>
-					</div>
-					{% endif %}
-					{% endfor %}
-					<p class="index_box_no">--没有更多通知--</p>
-				</div>
 
-				<div id="courseinfo">
-					<a href="xxx.html">{{ course.name }}</a>
-					<div id="人工智能原理info" class="information">
-						<div id="teacherpic" class="teacherpic">
-							<img src="/static/pic/teacher.png" alt="">
+					<div id="course_notice">
+						<div class="index_img">
+							<img src="/static/pic/message.png" alt="">
 						</div>
-						<strong id="人工智能原理teacher">{{ course.teacher }}&nbsp</strong>
-						<span id="人工智能原理term">{{ course.time }}</span>
-						<p>课程简介：{{ course.info }}</p>
+						<span>
+							通知
+						</span>
+						{% for m in messages %}
+						{% if m['course_name'] == course['name'] %}
+						<div class="coursegpubox">
+							<a href="/message/{{ m['id'] }}/">
+								<div class="index_img">
+									<img src="/static/pic/message_.png" alt="">
+								</div>
+								{{ m['title'] }}
+							</a>
+						</div>
+						{% endif %}
+						{% endfor %}
+						<p class="index_box_no">--没有更多通知--</p>
 					</div>
-				</div>
-
-				<div id="coursegpu">
-					<div class="index_img">
-						<img src="/static/pic/gpu_big.png" alt="">
-					</div>
-					<span>
-						GPUs
-					</span>
-					{% for g in gpus %}
-					{% if g['course_name'] == course['name'] %}
-					<div class="coursegpubox">
-						<a href="/submit/">
-							<div class="index_img">
-								<img src="/static/pic/gpu.png" alt="">
-							</div>
-							{{ g['name'] }} --- {{ g['info'] }}
-						</a>
-					</div>
-					{% endif %}
-					{% endfor %}
-					<p class="index_box_no">--没有更多gpu--</p>
 				</div>
 				
+				<div id="course_below">
+					<div id="courseinfo">
+						<p href="xxx.html" style="font-size: 22px;font-weight: bold;">{{ course.name }}</p>
+						<div id="info" class="information">
+							<div id="teacherpic" class="teacherpic">
+								<img src="/static/pic/teacher.png" alt="">
+							</div>
+							<strong id="teacher">{{ course.teacher }}&nbsp</strong>
+							<span id="term">{{ course.time }}</span>
+							<p>课程简介：{{ course.info }}</p>
+						</div>
+					</div>
+
+					<div id="coursegpu">
+						<div class="index_img">
+							<img src="/static/pic/gpu_big.png" alt="">
+						</div>
+						<span>
+							GPUs
+						</span>
+						{% for g in gpus %}
+						{% if g['course_name'] == course['name'] %}
+						<div class="coursegpubox">
+							<a href="/submit/">
+								<div class="index_img">
+									<img src="/static/pic/gpu.png" alt="">
+								</div>
+								{{ g['name'] }} --- {{ g['info'] }}
+								这个地方能显示成已用40%之类的吗
+							</a>
+						</div>
+						{% endif %}
+						{% endfor %}
+						<p class="index_box_no">--没有更多gpu--</p>
+					</div>
+				</div>
 			</div>
 		</div>
 
