--- a/watchlist/templates/process_xxx.html
+++ b/watchlist/templates/process_xxx.html
@@ -14,18 +14,18 @@
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-	            <img src="/static/pic/logo.png" alt="">
+	            <img src="../static/pic/logo.png" alt="">
 	            <span>GPU管理系统</span>
 	        </div>
 
 			<div id="other">
 				<form form method="POST" action="/logout/">
 					<a id="login_out" href="/logout/" class="button">退出登录</a>
-					<div id="user_name">
-						<span>{{ current_user.username }}</span>
-					</div>
 					<div id="user_img">
 						<img src="/static/pic/1.jpg" alt="image">
+					</div>
+					<div id="user_name">
+						<span>{{ current_user.username }}</span>
 					</div>
 				</form>			
 			</div>
