--- a/watchlist/templates/stu_notice_xxx.html
+++ b/watchlist/templates/stu_notice_xxx.html
@@ -14,18 +14,18 @@
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-	            <img src="/static/pic/logo.png" alt="">
+	            <img src="../static/pic/logo.png" alt="">
 	            <span>GPU管理系统</span>
 	        </div>
 
 			<div id="other">
 				<form form method="POST" action="/logout/">
 					<a id="login_out" href="/logout/" class="button">退出登录</a>
-					<div id="user_name">
-						<span>{{ current_user.username }}</span>
-					</div>
 					<div id="user_img">
 						<img src="/static/pic/1.jpg" alt="image">
+					</div>
+					<div id="user_name">
+						<span>{{ current_user.username }}</span>
 					</div>
 				</form>			
 			</div>
@@ -75,7 +75,7 @@
 				<form method="POST" action="/">
 					<div id="notice_xxx">
 						<p>{{ message['course_name'] }}通知</p>
-						<p style="font-weight:normal;font-size:18px;">{{ message['title'] }}</p>
+						<p style="font-size:18px;margin:3px;">{{ message['title'] }}</p>
 						<div id="notice_xxx_xxx">
 							{{ message['info'] }}
 						</div>
