--- a/watchlist/templates/course_xxx.html
+++ b/watchlist/templates/course_xxx.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Programm1-Result</title>
-	<link rel="stylesheet" href="/static/style.css" />
+	<title>Settings</title>
+	<link rel="stylesheet" href="/static/style_student.css" />
 </head>
 <body>
 	{% for message in get_flashed_messages() %}
@@ -22,7 +22,7 @@
 				<form form method="POST" action="/logout/">
 					<a id="login_out" href="/logout/" class="button">退出登录</a>
 					<div id="user_img">
-						<img src="/static/pic/1.jpg" alt="image">
+						<img src="{{ current_user.pic_path }}" alt="image">
 					</div>
 					<div id="user_name">
 						<span>{{ current_user.username }}</span>
