--- a/watchlist/templates/index_teacher.html
+++ b/watchlist/templates/index_teacher.html
@@ -24,7 +24,7 @@
 					</select>
 				</div>
 				<div id="userimg">
-					<img src="/static/pic/1.jpg" alt="image">
+					<img src="{{ current_user.pic_path }}" alt="image">
 				</div>				
 			</div>
 		</div>
