--- a/watchlist/templates/stu_notice.html
+++ b/watchlist/templates/stu_notice.html
@@ -22,7 +22,7 @@
 				<form form method="POST" action="/logout/">
 					<a id="login_out" href="/logout/" class="button">退出登录</a>
 					<div id="user_img">
-						<img src="/static/pic/1.jpg" alt="image">
+						<img src="{{ current_user.pic_path }}" alt="image">
 					</div>
 					<div id="user_name">
 						<span>{{ current_user.username }}</span>
