--- a/watchlist/templates/tea_notice_xxx.html
+++ b/watchlist/templates/tea_notice_xxx.html
@@ -18,11 +18,24 @@
 	            <span>GPU管理系统</span>
 	        </div>
 
+						{% for c in courses %}
+						{% if c['name'] == message['course_name'] %}
+						<a href="/my_courses/all_courses/{{ c['id'] }}/" class="button">
+							返回课程页面
+							<div class="asidepic" style="margin:5px 2px;">
+								<img src="/static/pic/back.png" alt="">
+							</div>
+						</a>
+						{% endif %}
+						{% endfor %}
+
+
+
 			<div id="other">
 				<form form method="POST" action="/logout/">
 					<a id="login_out" href="/logout/" class="button">退出登录</a>
 					<div id="user_img">
-						<img src="/static/pic/1.jpg" alt="image">
+						<img src="{{ current_user.pic_path }}" alt="image">
 					</div>
 					<div id="user_name">
 						<span>{{ current_user.username }}</span>
