--- a/watchlist/static/style_student.css
+++ b/watchlist/static/style_student.css
@@ -336,7 +336,18 @@ html {
 	height: 20px;
 	margin: 2px;
 }
-
+#choice_button {
+	height: 25px;
+	/*width: 100px;*/
+	float:right;
+	border:1px solid white;
+	font-size: 15px;
+	font-weight: normal;
+	padding: 2px 5px;
+	border-radius: 5px;
+	line-height: 25px;
+	background: rgba(255,255,255,0.2);
+}
 #loginbutton {
 	float: right;
 	font-size: 15px;
@@ -415,7 +426,7 @@ html {
 	margin:3px;
 	overflow: auto;
 	background: rgba(255, 255, 255, 0.65);
-	padding: 3px;
+	padding: 5px;
 	border: 1px solid rgba(255, 255, 255, 0.6);
 	border-radius: 10px;
 }
@@ -683,6 +694,7 @@ html {
 	overflow: auto;
 }
 #notice_xxx p{
+	text-indent: -156px;
 	text-align: center;
 	font-size: 25px;
 	font-weight: bold;
@@ -692,13 +704,13 @@ html {
 	font-size: 20px;
 }
 #notice_xxx a{
+	float:left;
 	text-decoration: none;
 	height: 30px;
 	padding: 0 5px;
 	margin:5px 15px 6px 2px;
 	font-size:15px;
 	line-height: 30px;
-	float:right;
 	background: rgba(255, 255, 255, 0.2);
 	color:black;
 	text-decoration: none;
